--- a/Assignment2Website/mysite/package.json
+++ b/Assignment2Website/mysite/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node server"
+    "start": "node server.js"
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
